# Crud_BD

./: .gitignore  pyproject.toml
mysql/: README.md  utils.py
mysql/pandas/: mysql.py
postgresql/: README.md  utils.py
psqlite/: pandas_to_sqllite.ipynb  utils.py
