[tool.poetry]
name = "crud"
version = "0.1.0"
description = ""
authors = ["Fernando Vieira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
sqlalchemy = "^2.0.17"
pymysql = "^1.0.3"
mysql-connector-python = "^8.0.33"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
